force-app/main/default/objects/KB_Pipeline_Run__c/KB_Pipeline_Run__c.object-meta.xml
<CustomObject>
    <description>Operational tracking record for deduplication and transformation pipeline executions.</description>
    <label>KB Pipeline Run</label>
    <nameField>
        <displayFormat>PIPE-{0000}</displayFormat>
        <label>Pipeline Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KB Pipeline Runs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>