force-app/main/default/objects/KB_Pipeline_Run__c/fields/Assessment_Run__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Run__c</fullName>
    <description>Assessment run that initiated this pipeline run.</description>
    <label>Assessment Run</label>
    <referenceTo>KB_Assessment_Run__c</referenceTo>
    <relationshipLabel>Pipeline Runs</relationshipLabel>
    <relationshipName>Pipeline_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>