force-app/main/default/objects/KB_Pipeline_Run__c/fields/Execution_Modes__c.field-meta.xml
<CustomField>
    <fullName>Execution_Modes__c</fullName>
    <label>Execution Modes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>DEDUPLICATION</fullName><default>true</default><label>DEDUPLICATION</label></value>
            <value><fullName>AI Fix</fullName><default>false</default><label>AI Fix</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>