force-app/main/default/objects/KB_Pipeline_Run__c/fields/Pair_Evaluations_Created__c.field-meta.xml
<CustomField>
    <fullName>Pair_Evaluations_Created__c</fullName>
    <label>Pair Evaluations Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>