force-app/main/default/objects/KB_Pipeline_Run__c/fields/Scope_Details_JSON__c.field-meta.xml
<CustomField>
    <fullName>Scope_Details_JSON__c</fullName>
    <label>Scope Details JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>