force-app/main/default/objects/KB_Pipeline_Run__c/fields/Scope_Type__c.field-meta.xml
<CustomField>
    <fullName>Scope_Type__c</fullName>
    <defaultValue>'Selected'</defaultValue>
    <label>Scope Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>