force-app/main/default/objects/KB_Pipeline_Run__c/fields/Total_Input_Articles__c.field-meta.xml
<CustomField>
    <fullName>Total_Input_Articles__c</fullName>
    <label>Total Input Articles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>