force-app/main/default/objects/KB_Pipeline_Run__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Triggered Pipeline Runs</relationshipLabel>
    <relationshipName>Triggered_Pipeline_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>